# ChatBot

./: .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  README_en.md  README_ja.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.json
_backup/: .gitignore  LICENSE  package.json  tsconfig.json
_backup/src/: index.ts
_backup/src/io/: agent.ts  console-command.ts
_backup/src/types/: index.ts
_backup/src/validators/: agent-config-validator.ts  chat-history-validator.ts
public/: index.html
src/: App.vue  main.py  main.ts  preload.ts
src/agents/example/: config.json
src/chatbot/: agent.py  chat_history_loader.py  chatbot.py  chatbot.ts  command.py  prompts.py  types.py
src/chatbot/validators/: agent_config.py  chat_history.py
src/components/: ChatBox.vue
src/console/: agent.py  command.py
src/console/types/: __init__.py
src/console/validators/: validator.py
src/emotion/: emotion.py  prompts.py
src/io/: agent.ts  bot-config.ts  console-command.ts  console.ts  index.ts
src/prompts/: emotion.py  role_play.py
src/types/: config.ts  index.ts
src/ui/: command.py
src/utils/: utils.py
src/validators/: index.ts  schema.json
src/views/: HomeView.vue
