[project]
name = "chatbot"
version = "1.1.0"
description = "ChatBot is an interactive chatting tool with local deployed LLM."
authors = [
    {name = "LYZhelloworld",email = "1326521+LYZhelloworld@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jsonschema (>=4.23.0,<5.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "prompt-toolkit>=3.0.51",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pyinstaller>=6.13.0",
]
