[project]
name = "chatbot"
version = "1.1.0"
description = "ChatBot is an interactive chatting tool with local deployed LLM."
authors = [
    {name = "LYZhelloworld",email = "1326521+LYZhelloworld@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jsonschema (>=4.23.0,<5.0.0)",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "streamlit>=1.45.1",
]
