[project]
name = "chatbot"
version = "1.2.1"
description = "ChatBot is an interactive chatting tool with local deployed LLM."
authors = [
    {name = "LYZhelloworld",email = "1326521+LYZhelloworld@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "pydantic>=2.11.3",
    "streamlit>=1.45.1",
]
